# src/controllers/agreements_controller.ts
@@ -9,18 +9,18 @@ import {
   Response,
   Example,
   Path,
-} from 'tsoa';
-import { Model } from 'mongoose';
-import { IAgreements } from '../types/interfaces';
+} from "tsoa";
+import { Model } from "mongoose";
+import { IAgreements } from "../types/interfaces";
 
-const AgreementsModel: Model<IAgreements> = require('../models/agreements_model');
+const AgreementsModel: Model<IAgreements> = require("../models/agreements_model");
 
-@Route('agreements')
+@Route("agreements")
 export default class AgreementsController {
   /**
    * Get List of All agreements
    */
-  @Get('/')
+  @Get("/")
   public async getAgreements(): Promise<IAgreements[]> {
     return await AgreementsModel.find();
   }
@@ -29,52 +29,52 @@ export default class AgreementsController {
    * Get a agreement details
    * @example agreementId "_"
    */
-  @Response(404, 'The requested agreement is not found')
-  @Get('{agreementId}')
+  @Response(404, "The requested agreement is not found")
+  @Get("{agreementId}")
   public async getAgreement(agreementId: string): Promise<IAgreements | null> {
-    return AgreementsModel.findById(agreementId);
+    return await AgreementsModel.findById(agreementId);
   }
 
   /**
    * Delete a agreement
    * @example agreementId "3452ter23wt"
    */
-  @Response(404, 'The requested agreement is not found')
-  @SuccessResponse('200', 'Deleted')
-  @Delete('{agreementId}')
+  @Response(404, "The requested agreement is not found")
+  @SuccessResponse("200", "Deleted")
+  @Delete("{agreementId}")
   public async deleteAgreement(
     agreementId: string
   ): Promise<IAgreements | null> {
-    return AgreementsModel.findByIdAndDelete(agreementId);
+    return await AgreementsModel.findByIdAndDelete(agreementId);
   }
 
   /**
    * Create a agreement
    */
-  @Response(422, 'Validation Failed')
-  @SuccessResponse('200', 'Created')
+  @Response(422, "Validation Failed")
+  @SuccessResponse("200", "Created")
   @Example<IAgreements>({
-    name: 'Ahmad',
-    parties: ['certificate'],
-    startDate: new Date('2022-09-10'),
-    endDate: new Date('2022-09-10'),
-    details: 'first Agreement',
-    // attachments: [{ name: 'personal information' }],
+    name: "Ahmad",
+    parties: ["certificate"],
+    startDate: new Date("2022-09-10"),
+    endDate: new Date("2022-09-10"),
+    details: "first Agreement",
+    attachments: [{ name: "personal information" }],
     reminder: true,
   })
-  @Post('create')
+  @Post("create")
   public async createAgreement(
     @Body() agreement: IAgreements
   ): Promise<IAgreements> {
-    return new AgreementsModel({ ...agreement }).save();
+    return await new AgreementsModel({ ...agreement }).save();
   }
 
   /**
    * Update a agreement
    */
-  @Response(422, 'Validation Failed')
-  @SuccessResponse('200', 'Updated')
-  @Put('update/{agreementId}')
+  @Response(422, "Validation Failed")
+  @SuccessResponse("200", "Updated")
+  @Put("update/{agreementId}")
   public async updateAgreement(
     @Path() agreementId: string,
     @Body() agreement: Partial<IAgreements>
@@ -90,8 +90,8 @@ export default class AgreementsController {
         agreement.endDate ?? agreementDocument.endDate;
       agreementDocument.details =
         agreement.details ?? agreementDocument.details;
-      // agreementDocument.attachments =
-      //   agreement.attachments ?? agreementDocument.attachments;
+      agreementDocument.attachments =
+        agreement.attachments ?? agreementDocument.attachments;
       agreementDocument.reminder =
         agreement.reminder ?? agreementDocument.reminder;
 
