# src/models/agreements_model.ts
@@ -1,5 +1,5 @@
-import { Schema, model } from 'mongoose';
-import { IAgreements } from '../types/interfaces';
+import { Schema, model } from "mongoose";
+import { IAgreements } from "../types/interfaces";
 
 const AgreementsSchema = new Schema<IAgreements>({
   name: { type: String, required: true },
@@ -7,12 +7,12 @@ const AgreementsSchema = new Schema<IAgreements>({
   startDate: { type: Date, required: true },
   endDate: { type: Date, required: true },
   details: { type: String, required: true },
-  // attachments: [{ type: Object, required: true }],
+  attachments: [{ type: Object, required: true }],
   reminder: { type: Boolean, required: true },
 });
 
-AgreementsSchema.virtual('url').get(function () {
-  return 'agreements/' + this._id;
+AgreementsSchema.virtual("url").get(function () {
+  return "agreements/" + this._id;
 });
 
-module.exports = model<IAgreements>('Agreement', AgreementsSchema);
+module.exports = model<IAgreements>("Agreement", AgreementsSchema);
