# src/models/communications_model.ts
@@ -1,12 +1,12 @@
-import { Schema, model } from 'mongoose';
-import { ICommunications } from '../types/interfaces';
+import { Schema, model } from "mongoose";
+import { ICommunications } from "../types/interfaces";
 
 const CommunicationsSchema = new Schema<ICommunications>({
   referenceType: {
     type: String,
     required: true,
-    enum: ['sessions', 'agreements', 'disputes', 'users'],
-    default: 'sessions',
+    enum: ["sessions", "agreements", "disputes", "users"],
+    default: "sessions",
   },
   referenceID: { type: String },
   // partiesUIDs: [{ type: Schema.Types.ObjectId, ref: 'User' }],
@@ -14,19 +14,20 @@ const CommunicationsSchema = new Schema<ICommunications>({
   lastUpdate: { type: Date, required: true },
   messages: [
     {
-      type: Object({
+      type: {
         messageType: { type: String, required: true },
         messageContent: { type: String, required: true },
-        senderUID: { type: Schema.Types.ObjectId, ref: 'User', required: true },
+        // senderUID: { type: Schema.Types.ObjectId, ref: "User", required: true },
+        senderUID: { type: String, required: true },
         sendDate: { type: Date, required: true },
         deliveryDetails: [{ type: Object, required: true }],
-      }),
+      },
       required: true,
     },
   ],
 });
-CommunicationsSchema.virtual('url').get(function () {
-  return 'communications/' + this._id;
+CommunicationsSchema.virtual("url").get(function () {
+  return "communications/" + this._id;
 });
 
-module.exports = model<ICommunications>('Communication', CommunicationsSchema);
+module.exports = model<ICommunications>("Communication", CommunicationsSchema);
